tests/fixtures/compose_missing_scene.stderr
error[E0412]: cannot find type `UndefinedScene` in this scope
 --> tests/fixtures/compose_missing_scene.rs:6:21
  |
6 |     let _ = routes![UndefinedScene];
  |                     ^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `UndefinedScene` in this scope
 --> tests/fixtures/compose_missing_scene.rs:6:21
  |
6 |     let _ = routes![UndefinedScene];
  |                     ^^^^^^^^^^^^^^ not found in this scope
