tests/fixtures/compose_missing_scene.rs
use telegram_botkit::routes;

struct Hello;

fn main() {
    let _ = routes![UndefinedScene];
}